--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-GRANT_TYPE=!ChangeMe!
+GRANT_TYPE=client_credentials
 CLIENT_ID=!ChangeMe!
 CLIENT_SECRET=!ChangeMe!
-SCOPE=!ChangeMe!
+SCOPE=api_labonneboitev1
