--- a/.env
+++ b/.env
@@ -47,3 +47,8 @@ GRANT_TYPE=client_credentials
 CLIENT_ID=!ChangeMe!
 CLIENT_SECRET=!ChangeMe!
 SCOPE=api_labonneboitev1
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=semaphore
+###< symfony/lock ###
